# RNE_drone_tracking

./: .gitignore  ReadMe.md
REN_gazebo/: CMakeLists.txt  package.xml
REN_gazebo/launch/: RNE_Ardpilot.launch  RNE_jackal_description.launch  RNE_robot.launch  RNE_simu_px4.launch  RNE_simu_setup.launch  RNE_simu_test.launch  RNE_simu_world.launch  Untitled-1
REN_gazebo/robot/: iris.sdf  model.config  rne_robot.sdf
REN_gazebo/robot/urdf/: jackal.urdf.xacro
REN_gazebo/worlds/: RNE_robot.world
RNE_VS/: CMakeLists.txt  package.xml
RNE_VS/config/: rne_settings.yaml  rne_tags.yaml
RNE_VS/launch/: rne_vs.launch
RNE_VS/src/: rne_tag_navig.cpp  rne_vs.cpp
RNE_control/src/: CMakeLists.txt  package.xml
RNE_control/src/launch/: rne_drone_control.launch  rne_mission_control.launch
RNE_control/src/src/: rne_control.cpp  rne_drone_traj.cpp
