<?xml version="1.0"?>
<package format="2">
  <name>rne_vs</name>
  <version>0.0.0</version>
  <description>The rne_gazebo package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="zhongmou.li@manchester.ac.uk">zhongmou</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>



  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>apriltag_ros</build_depend>
  <build_depend>Eigen3</build_depend>
  <build_depend>ct_core</build_depend>
  <build_depend>ct_rbd</build_depend>
  <build_depend>ct_optcon</build_depend>
  <build_depend>ct_models</build_depend>


  <build_export_depend>gazebo_ros</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>apriltag_ros</build_export_depend>
  <build_export_depend>Eigen3</build_export_depend>
  <build_export_depend>ct_core</build_export_depend>
  <build_export_depend>ct_rbd</build_export_depend>
  <build_export_depend>ct_optcon</build_export_depend>
  <build_export_depend>ct_models</build_export_depend>
  

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>apriltag_ros</exec_depend>
  <exec_depend>Eigen3</exec_depend>
  <exec_depend>ct_core</exec_depend>
  <exec_depend>ct_rbd</exec_depend>
  <exec_depend>ct_optcon</exec_depend>
  <exec_depend>ct_models</exec_depend>  


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
