<?xml version="1.0"?>
<package format="2">
  <name>rne_control</name>
  <version>0.0.0</version>
  <description>The rne_control package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="zhongmou.li@manchester.ac.uk">zhongmou</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>



  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>mavros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rne_vs</build_depend>
  <build_depend>geometric_controller</build_depend>
  <build_depend>apriltag_ros</build_depend>
  <build_depend>geometry_msgs</build_depend>
  

  <build_export_depend>mavros</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rne_vs</build_export_depend>
  <build_export_depend>geometric_controller</build_export_depend>
  <build_export_depend>apriltag_ros</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>

  <exec_depend>mavros</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rne_vs</exec_depend>
  <exec_depend>geometric_controller</exec_depend>
  <exec_depend>apriltag_ros</exec_depend>
  <exec_depend>geometry_msgs</exec_depend> 

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>


